# users_api

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  changelog.txt  cloudbuild.yaml  docker-compose.yaml  execute_tests.sh  pyproject.toml
app/: app.py  migrate.sh  postgres_ready.py
kubernetes/: cloud-sql-proxy-deployment.yaml  cloud-sql-proxy-service.yaml  gcp-automate-cloudproxy-deployment-with-migration.yaml  gcp-automate-deployment.yaml  gcp-automate-service.yaml  gcp-manual-cloudproxy-deployment.yaml  gcp-manual-deployment.yaml  gcp-manual-service.yaml
kubernetes/README/: deploy-with-cloud-sql-proxy.md
kubernetes/cloud-sql-proxy/: cloud-sql-proxy-deployment.yaml
kubernetes/postgres-client/: postgres-client-pod.yaml
kubernetes/users-api/: users-api-deployment.yaml  users-api-ingress.yaml  users-api-migrate-job.yaml  users-api-service.yaml
scripts/: install_editable_packages.sh  load_permissions.py  migrate.sh  postgres_is_ready.py
tests/: conftest.py  test_auth.py  test_users.py
users_api/: app.py  config.py  editable_install.sh
users_api/errors/: auth.py  users.py
users_api/routers/: _README.md  auth.py  users.py
users_api/schemas/: auth.py  users.py
users_api/security/: authentication.py  authorization.py  password.py  role_permissions.csv
users_api/utils/: handle_permissions.py  read_permissions.py  users.py
