[tool.poetry]
name = "users-api"
version = "0.1.0"
description = ""
authors = ["Bohdan Stratila <bogdanstratila@icloud.com>"]
readme = "README.md"
packages = [{include = "users_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pydantic = "^1.10.5"
uvicorn = "^0.20.0"
users-db = "0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
