[tool.poetry]
name = "users-api"
version = "0.1.0"
description = ""
authors = ["Bohdan Stratila <bogdanstratila@icloud.com>"]
readme = "README.md"
packages = [{include = "users_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pydantic = {extras = ["email"], version = "^1.10.7"}
uvicorn = "^0.20.0"
users-db = "0.0.14"
pytest = "7.2.1"
httpx = "^0.23.3"
tenacity = "^8.2.2"
pytest-cov = "^4.0.0"
pyjwt = "^2.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
